fixed up alignment on portfolio.html and added nametags

--- a/style.css
+++ b/style.css
@@ -18,3 +18,16 @@
     margin-bottom: 5px;
     color: #4aaaa5;
 }
+.port-link-head{
+    margin: 0;
+    padding: 8px 0 8px 0;
+    width: 200px;
+    height: 36px;
+    font-size: 18px;
+    background-color: #4aaaa5;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    text-align: center;
+    color: #ffffff;
+    position: absolute;
+    bottom: 20px;
+}
